# mini-blockchain

./: .gitignore  CMakeLists.txt  README.md
include/: block.hpp  blockchain.hpp
src/: CMakeLists.txt  block.cpp  blockchain.cpp  main.cpp
